// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`inspect basic error rendering simple error 1`] = `
"Error: Something went wrong
@ Function.execute /app/src/index.ts:10:15
@ process          /app/src/main.ts:20:10
@ <?>              /app/index.js:5:1"
`;

exports[`inspect basic error rendering error with no stack 1`] = `"Error: No stack available"`;

exports[`inspect basic error rendering error with empty message 1`] = `
"Error
@ Function.execute /app/src/index.ts:10:15"
`;

exports[`inspect error with context simple context object 1`] = `
"Error: API failed
@ apiCall       /app/src/api.ts:45:10
@ handleRequest /app/src/server.ts:100:15
{
  userId: 123,
  endpoint: '/api/users'
}"
`;

exports[`inspect error with context nested context object 1`] = `
"Error: Complex failure
@ process /app/src/handler.ts:30:8
{
  request: {
    method: 'POST',
    url: '/api/data',
    headers: {
      'content-type': 'application/json'
    }
  },
  timestamp: '2024-01-15T10:30:00Z',
  traceId: '123-456-789'
}"
`;

exports[`inspect error with cause single level cause 1`] = `
"Error: Failed to fetch user
@ fetchUser     /app/src/user.ts:30:15
@ handleRequest /app/src/api.ts:50:20
  ↓
  Error: Database connection failed
  @ connect /app/src/db.ts:15:10"
`;

exports[`inspect error with cause nested causes 1`] = `
"Error: Session creation failed
@ createSession /app/src/session.ts:25:15
  ↓
  Error: Redis connection failed
  @ redis.connect /app/src/cache.ts:10:10
    ↓
    Error: Network timeout
    @ socket /app/src/net.ts:5:5"
`;

exports[`inspect AggregateError simple aggregate error 1`] = `
"AggregateError: Multiple services failed
@ coordinator /app/src/coordinator.ts:50:15
    ↓
    │
  0 ├─ Error: Service A failed
    │  @ serviceA /app/src/services/a.ts:10:5
    │
  1 ├─ Error: Service B timeout
    │  @ serviceB /app/src/services/b.ts:20:10
    └"
`;

exports[`inspect AggregateError aggregate error with context 1`] = `
"AggregateError: Data layer failures
@ transaction /app/src/transaction.ts:100:20
{
  transactionId: 'tx-456',
  timestamp: 1234567890
}
    ↓
    │
  0 ├─ Error: Database error
    │  @ query /app/src/db.ts:30:10
    │  {
    │    table: 'users',
    │    operation: 'INSERT'
    │  }
    │
  1 ├─ Error: Cache error
    │  @ cache.set /app/src/cache.ts:15:5
    │  {
    │    key: 'user:123',
    │    ttl: 3600
    │  }
    └"
`;

exports[`inspect AggregateError nested aggregate errors 1`] = `
"AggregateError: Outer aggregate
@ main /app/src/main.ts:50:15
    ↓
    │
  0 ├─ AggregateError: Inner aggregate
    │  @ processInner /app/src/process.ts:20:10
    │  ↓
    │    └─ Error: Inner failure
    │     @ inner /app/src/inner.ts:5:5
    │
  1 ├─ Error: Outer failure
    │  @ outer /app/src/outer.ts:10:10
    └"
`;

exports[`inspect stack trace filtering filters node_modules frames 1`] = `
"Error: Test error
@ userCode     /app/src/user.ts:10:5
@ moreUserCode /app/src/main.ts:30:15
@ ...          elided 2 frames"
`;

exports[`inspect stack trace filtering shows all frames filtered message 1`] = `
"Error: All filtered
@ ...             all 3 frames elided"
`;

exports[`inspect comprehensive error scenarios custom error class 1`] = `
"CustomError: Custom failure
@ test /app/test.ts:10:5"
`;

exports[`inspect comprehensive error scenarios error with very long message 1`] = `
"Error: This is a very long error message that This is a very long error message that This is a very long error message that This is a very long error message that This is a very long error message that This is a very long error message that This is a very long error message that This is a very long error message that This is a very long error message that This is a very long error message that ends here
@ test /app/test.ts:10:5"
`;

exports[`inspect comprehensive error scenarios error with special characters in context 1`] = `
"Error: Special chars
@ test /app/test.ts:10:5
{
  'special-key': 'value',
  'key with spaces': true,
  'emoji🎉': 'test',
  nested: {
    'more-special': 123
  }
}"
`;

exports[`inspect comprehensive error scenarios error with circular reference in context 1`] = `
"Error: Circular ref
@ test /app/test.ts:10:5
{
  a: 1,
  self: [Circular]
}"
`;

exports[`inspect visual guides (with color) shows tree characters for nested errors 1`] = `
"\x1B[31mError\x1B[39m: Main
@ main /app/main.ts:10:10
  ↓
  \x1B[31mError\x1B[39m: Cause
  @ cause /app/cause.ts:5:5"
`;

exports[`inspect visual guides (with color) shows proper indentation for aggregate errors 1`] = `
"\x1B[31mAggregateError\x1B[39m: Multiple
@ main /app/main.ts:10:10
\x1B[2m    ↓\x1B[22m
\x1B[2m    │\x1B[22m
  \x1B[2m0 ├─\x1B[22m \x1B[31mError\x1B[39m: First
    \x1B[2m│  \x1B[22m@ first /app/first.ts:1:1
    \x1B[2m│\x1B[22m
  \x1B[2m1 ├─\x1B[22m \x1B[31mError\x1B[39m: Second
    \x1B[2m│  \x1B[22m@ second /app/second.ts:2:2
    \x1B[2m│\x1B[22m
  \x1B[2m2 ├─\x1B[22m \x1B[31mError\x1B[39m: Third
    \x1B[2m│  \x1B[22m@ third /app/third.ts:3:3
\x1B[2m    └\x1B[22m"
`;
